--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -92,7 +92,7 @@
                 data-bs-toggle="dropdown"
                 title="Profile"
               >
-                <img
+                <img id="nav-profile-img"
                   src="../assets/image/Profile-picture.png"
                   alt="Profile"
                   class="profile-img"
@@ -144,8 +144,10 @@
               id="coverImage"
             />
             <div class="cover-image-overlay">
-              <label class="change-cover-btn" for="coverImageInput">
-                <i class="bi bi-camera-fill"></i> Change Cover
+              <label id="coverImageInputLabel" class="change-cover-btn" for="coverImageInput">
+                <i class="bi bi-camera-fill" id="cameraIconCoverImage"></i>
+                <span class="spinner-border spinner-border-sm" id="uploadCoverImageInputSpinner" style="display: none;"></span>
+                 Change Cover
               </label>
               <input
                 type="file"
@@ -164,19 +166,20 @@
                   <div class="profile-header">
                     <div class="profile-picture-container">
                       <img
-                        src="../assets/image/Profile-picture.png"
-                        alt="Profile Picture"
-                        class="profile-picture"
-                        id="profileImage"
+                              src="../assets/image/Profile-picture.png"
+                              alt="Profile Picture"
+                              class="profile-picture"
+                              id="profileImage"
                       />
-                      <label class="change-profile-btn" for="profileImageInput">
-                        <i class="bi bi-camera-fill"></i>
+                      <label id="profileImageInputLabel" class="change-profile-btn" for="profileImageInput">
+                        <i class="bi bi-camera-fill" id="cameraIconProfileImage"></i>
+                        <span class="spinner-border spinner-border-sm" id="uploadProfileImageSpinner" style="display: none;"></span>
                       </label>
                       <input
-                        type="file"
-                        id="profileImageInput"
-                        accept="image/*"
-                        style="display: none"
+                              type="file"
+                              id="profileImageInput"
+                              accept="image/*"
+                              style="display: none"
                       />
                     </div>
                     <div class="profile-info">
@@ -887,6 +890,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/js/profile.js"></script>
   </body>
 </html>
