--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -168,12 +168,12 @@
                         <div class="form-floating mb-3">
                           <input type="email" class="form-control" id="email" value="john.doe@example.com" />
                           <label for="email">Email address</label>
+                          <button type="button" class="btn btn-outline-primary btn-sm verify-button">Verify</button>
                         </div>
                   
                         <div class="form-floating mb-3 position-relative">
                           <input type="tel" class="form-control" id="phone" placeholder="Phone number" />
                           <label for="phone">Phone Number</label>
-                          <button type="button" class="btn btn-outline-primary btn-sm verify-button">Verify</button>
                         </div>
                   
                         <div class="form-floating mb-3">
@@ -467,6 +467,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/js/settings.js"></script>
   </body>
 </html>
