--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -78,13 +78,13 @@
                     </div>
                   </a>
                   <hr class="my-1">
-                  <a class="dropdown-item" href="admin/dashboard.html">
+                  <a id="adminButton" class="dropdown-item" href="admin/dashboard.html">
                     <i class="fa-solid fa-user-tie me-2"></i></i> Administration
                   </a>
                   <a class="dropdown-item" href="settings.html">
                     <i class="bi bi-gear-fill me-2"></i> Settings & Privacy
                   </a>
-                  <a class="dropdown-item text-danger" href="login.html">
+                  <a id="logoutButton" class="dropdown-item text-danger" href="#">
                     <i class="bi bi-box-arrow-right me-2"></i> Logout
                   </a>
                 </div>
@@ -381,8 +381,8 @@
                         </div>
                       </div>
       
-                      <h5 class="section-title">Admin Push Notifications</h5>
-                      <div class="mb-4">
+                      <h5 id="adminPushNotificationsTitle" class="section-title">Admin Push Notifications</h5>
+                      <div id="adminPushNotificationsItem" class="mb-4">
                         <div class="form-check form-switch mb-3">
                           <input class="form-check-input" type="checkbox" id="reportAlerts" checked>
                           <label class="form-check-label" for="reportAlerts">
@@ -399,17 +399,57 @@
                     <div class="settings-section">
                       <h5 class="section-title">Password</h5>
                       <form id="passwordForm" class="mb-4">
-                        <div class="form-floating mb-3">
-                          <input type="password" class="form-control" id="currentPassword" required>
+
+                        <div class="form-floating mb-3 password-field">
+                          <input type="password" class="form-control" id="currentPassword" placeholder="Current Password" required>
                           <label for="currentPassword">Current Password</label>
+                          <button type="button" class="btn toggle-password">
+                            <i class="fa-regular fa-eye"></i>
+                          </button>
                         </div>
-                        <div class="form-floating mb-3">
-                          <input type="password" class="form-control" id="newPassword" required>
+
+                        <div class="form-floating mb-3 password-field">
+                          <input type="password" class="form-control" id="newPassword" placeholder="New Password" required>
                           <label for="newPassword">New Password</label>
+                          <button type="button" class="btn toggle-password">
+                            <i class="fa-regular fa-eye"></i>
+                          </button>
                         </div>
-                        <div class="form-floating mb-3">
-                          <input type="password" class="form-control" id="confirmPassword" required>
-                          <label for="confirmPassword">Confirm New Password</label>
+
+                        <div class="form-floating mb-4 password-field">
+                          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+                          <label for="confirmPassword">Confirm Password</label>
+                          <button type="button" class="btn toggle-password">
+                            <i class="fa-regular fa-eye"></i>
+                          </button>
+                        </div>
+
+                        <div class="password-strength mb-3">
+                          <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                          <div class="strength-text">
+                            <span>Password strength:</span>
+                            <span id="strengthText">weak</span>
+                          </div>
+                        </div>
+
+                        <div class="password-requirements mb-3">
+                          <div class="requirement" data-requirement="length">
+                            <i class="fas fa-times-circle"></i> At least 8 characters
+                          </div>
+                          <div class="requirement" data-requirement="uppercase">
+                            <i class="fas fa-times-circle"></i> Contains uppercase letter
+                          </div>
+                          <div class="requirement" data-requirement="lowercase">
+                            <i class="fas fa-times-circle"></i> Contains lowercase letter
+                          </div>
+                          <div class="requirement" data-requirement="number">
+                            <i class="fas fa-times-circle"></i> Contains number
+                          </div>
+                          <div class="requirement" data-requirement="special">
+                            <i class="fas fa-times-circle"></i> Contains special character
+                          </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Update Password</button>
                       </form>
@@ -461,6 +501,35 @@
           </div>
         </div>
       </div>
+
+      <!-- OTP Modal -->
+    <div class="modal fade" id="otpModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Verify Email</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <div class="otp-inputs">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+            </div>
+
+            <div class="resend-timer text-center mb-3">
+              Resend OTP in <span id="timer">60</span> seconds
+            </div>
+
+            <button type="button" class="btn btn-primary w-100 mb-3" id="verifyOtpBtn">Verify OTP</button>
+            <button type="button" class="btn btn-outline-secondary w-100 mb-4" id="resendOtpBtn" disabled>Resend OTP</button>
+          </div>
+        </div>
+      </div>
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
