--- a/Front-end/pages/login.html
+++ b/Front-end/pages/login.html
@@ -73,6 +73,35 @@
       </div>
     </div>
 
+    <!-- OTP Modal -->
+    <div class="modal fade" id="otpModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Verify Email</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <div class="otp-inputs">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+            </div>
+
+            <div class="resend-timer text-center mb-3">
+              Resend OTP in <span id="timer">60</span> seconds
+            </div>
+
+            <button type="button" class="btn btn-primary w-100 mb-3" id="verifyOtpBtn">Verify OTP</button>
+            <button type="button" class="btn btn-outline-secondary w-100 mb-4" id="resendOtpBtn" disabled>Resend OTP</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
