--- a/Front-end/pages/register.html
+++ b/Front-end/pages/register.html
@@ -40,6 +40,7 @@
           <div class="form-floating mb-3">
             <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
             <label for="email">Email address</label>
+            <button type="button" class="btn btn-outline-primary btn-sm verify-button">Verify</button>
           </div>
 
           <div class="form-floating mb-3 password-field">
@@ -100,9 +101,11 @@
           </div>
 
           <div class="social-login">
-            <button type="button" class="btn btn-outline-light social-btn">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">
-            </button>
+            <a href="http://localhost:8080/oauth2/authorization/google" class="text-decoration-none">
+              <button type="button" class="btn btn-outline-light social-btn">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google">
+              </button>
+            </a>
             <button type="button" class="btn btn-outline-light social-btn">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/facebook/facebook-original.svg" alt="Facebook">
             </button>
@@ -118,10 +121,39 @@
       </div>
     </div>
 
+    <!-- OTP Modal -->
+    <div class="modal fade" id="otpModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Verify Email</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <div class="otp-inputs">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+              <input type="text" maxlength="1" pattern="[0-9]" inputmode="numeric">
+            </div>
+
+            <div class="resend-timer text-center mb-3">
+              Resend OTP in <span id="timer">60</span> seconds
+            </div>
+
+            <button type="button" class="btn btn-primary w-100 mb-3" id="verifyOtpBtn">Verify OTP</button>
+            <button type="button" class="btn btn-outline-secondary w-100 mb-4" id="resendOtpBtn" disabled>Resend OTP</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/register.js"></script>
   </body>
 </html>
